# pytorch-3dunet

./: .bumpversion.cfg  .gitignore  .travis.yml  LICENSE  Multihead_routine.md  README.md  SERVER_SETUP.rd  config_example.yaml  environment.yaml  kits1923dunet.py  manifest.yaml  predict.py  pyproject.toml  setup.py  train.py
.github/: FUNDING.yml
augment/: Seg2StuffTools.py  transformer-test.ipynb  transforms.py
bioimage-io/: UNet3DArabidopsisOvules.model.yaml
conda-recipe/: README.md  meta.yaml
datasets/: hdf5.py
embeddings/: contrastive_loss.py
examples/: train_config_dice.yaml  train_config_regression.yaml
pytorch3dunet/: __version__.py  build_h5ds.py  config.yaml  monitor.ipynb  predict.py  run.ipynb  run_test.ipynb  train.py
resources/: nohup.out  sample_cells.h5  sample_patch.h5  test_boundary.yaml  test_config.yaml  test_config_2d_boundary.yml  test_config_4d_input.yaml  test_config_boundary.yaml  test_config_ce.yaml  test_config_dice.yaml  test_config_myosin.yaml  test_config_regression.yaml  train_boundary.yaml  train_config.yaml  train_config_2d_boundary.yml  train_config_4d_input.yaml  train_config_boundary.yaml  train_config_ce.yaml  train_config_dice.yaml  train_config_dsb.yml  train_config_nuclei.yaml  train_config_regression.yaml
simple_3DUnet/: 3DUnet.ipynb  CNN-template.ipynb
tests/: conftest.py  test_config.py  test_criterion.py  test_dataset.py  test_models.py  test_predictor.py  test_trainer.py  test_transforms.py
unet3d/: buildingblocks.py  config.py  groupnorm.py  losses.py  metrics.py  model.py  predictor.py  tags.py  utils.py  (+1 more)
(+136 files in other folders)
